@@ -18,6 +18,7 @@ shadow-4.1.2.1 -> shadow-4.1.3						UNRELEASED
     group.
   * Added syslog support.
   * Use the groupmems PAM service name instead of groupmod.
+  * Fix segmentation faults when adding or removing users from a group.
 - newusers
   * Implement the -r, --system option.
 - passwd
