@@ -1,5 +1,14 @@
 2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/groupmems.c: When removing an user, check if deluser is on
+	the list, not adduser. This fixes a segmentation fault for every
+	call of groupmems -d.
+	* libmisc/list.c: Add assertions to help identifying these issues.
+	* libmisc/list.c: Avoid implicit conversion of pointers to
+	booleans.
+
+2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* NEWS, src/groupmems.c: Use the "groupmems" PAM service name
 	instead of "groupmod".
 
